Add full JAR